--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,6 +19,7 @@ security:
 
         main:
             pattern: ^/
+            anonymous: ~
             form_login:
                 provider: fos_userbundle
                 login_path: login
@@ -41,4 +42,4 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/amministrazione, role: ROLE_ADMIN }
