--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -42,4 +42,4 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/amministrazione, role: ROLE_ADMIN }
+        - { path: ^/amministrazione/, role: ROLE_ADMIN }
